code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

20-May-2010 Jean-Marie Simonet
# Fixed accidentally deleted com_users in sql jos_extensions
+ Implementing auto language metadata [20284]
$ Fixing strings in contact
# Fixing category name/title in single contact. (Thanks Bill)

19-May-2010 Mark Dexter
# Sample data fixes (Elin Waring)

19-May-2010 Jean-Marie Simonet
$ Updating en-GB.xml files
$ Fixed [20510] Buttons untranslated.
$ Fixed untranslated strings [20512] Thanks elin
$ Fixed image path for category display [20491] Thanks Bill.
$ Fixed missing Key [20509] Thanks Airton
$ Added missing strings.
$ Corrected en-US installation ini file. (Thanks Elin and Phil)
# Milkyway errors [20499] Thanks Elin.
$ Correcting string value [20482] Thanks Andrea
+ Added Cancel button in profile edit form [19699] Thanks Nate.
# Corrected admin mod_menu duplicate [20503]. Thanks Greg.

18-May-2010 Christophe Demko
 ^ Change template default style when installing
 # Fixed issue [#20488] Small CSS issue in config modal (Viet Vu Hoang)

18-May-2010 Jean-Marie Simonet
# Config fieldset description patch (Thanks you Dennis)
# Consolidated some strings


-------------------- 1.6.0 Beta Release [17-May-2010] ------------------

17-May-2010 Ron Severdia
# Fixed UI in Menu Manager and ACL widget

17-May-2010 Mark Dexter
# Fix display error in Parks image gallery

17-May-2010 Jean-Marie Simonet
$ Fixed some beez language strings + a CSS in bluestork
$ Fixed some com_users language issues
$ Adding missing strings in com_users (WIP)

17-May-2010 Ron Severdia
# Fix CSS & language strings for Weblinks UI
+ Added missing icon
$ Language fixes

17-May-2010 Christophe Demko
 $ Fix one string
 # Fix xml files
 # Fix PHP Notice:  Undefined variable: file in libraries/joomla/installer/adapters/component.php on line 1328
 # Fix [#20429] Last Visit Date -1-11-30 00:00:00 When Creating New User (Matt Thomas)