@@ -133,7 +133,7 @@ class ContactTableContact extends JTable
 		}
 		$this->alias = JApplication::stringURLSafe($this->alias);
 		if (trim(str_replace('-','',$this->alias)) == '') {
-			$this->alias = JFactory::getDate()->toFormat("%Y-%m-%d-%H-%M-%S");
+			$this->alias = JFactory::getDate()->format("Y-m-d-H-i-s");
 		}
 		/** check for valid category */
 		if (trim($this->catid) == '') {
