@@ -139,7 +139,7 @@ $listDirn	= $this->state->get('list.direction');
 					<?php echo $this->escape($item->author_name); ?>
 				</td>
 				<td class="center">
-					<?php echo JHTML::_('date',$item->created, '%Y.%m.%d'); ?>
+					<?php echo JHTML::_('date',$item->created, 'Y-m-d'); ?>
 				</td>
 				<td class="center">
 					<?php echo (int) $item->hits; ?>
