@@ -937,11 +937,11 @@ E_NOLOGIN_BLOCKED="Login denied! Your account has either been blocked or you hav
 
 ; Date format
 
-DATE_FORMAT_LC="%A, %d %B %Y"
-DATE_FORMAT_LC1="%A, %d %B %Y"
-DATE_FORMAT_LC2="%A, %d %B %Y %H:%M"
-DATE_FORMAT_LC3="%d %B %Y"
-DATE_FORMAT_LC4="%d.%m.%y"
+DATE_FORMAT_LC="l, d F Y"
+DATE_FORMAT_LC1="l, d F Y"
+DATE_FORMAT_LC2="l, d F Y H:i"
+DATE_FORMAT_LC3="d F Y"
+DATE_FORMAT_LC4="d.m.y"
 DATE_FORMAT_JS1="y-m-d"
 
 ; Months
