@@ -41,7 +41,7 @@ defined('_JEXEC') or die;
 				endif; ?>
 			</td>
 			<td class="center">
-				<?php echo JHTML::_('date',$item->created, '%Y-%m-%d %H:%M:%S'); ?>
+				<?php echo JHTML::_('date',$item->created, 'Y-m-d H:i:s'); ?>
 			</td>
 			<td class="center">
 				<?php echo $item->author_name;?>
