@@ -8,3 +8,5 @@ MOD_ARTICLES_ARCHIVE="Archived Articles"
 MOD_ARTICLES_ARCHIVE_FIELD_COUNT_LABEL="Count"
 MOD_ARTICLES_ARCHIVE_FIELD_COUNT_DESC="The number of months to display (the default is 10)"
 MOD_ARTICLES_ARCHIVE_XML_DESCRIPTION="This module shows a list of the calendar months containing archived articles. After you have changed the status of an article to archived, this list will be automatically generated."
+MOD_ARTICLES_ARCHIVE_DATE="%1$s, %2$s"
+
