@@ -4,7 +4,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-DATE_FORMAT_LC2="%d. %b. %Y"
+DATE_FORMAT_LC2="d. M. Y"
 TPL_BEEZ2_ADDITIONAL_INFORMATION="Additional information"
 TPL_BEEZ2_ALTCLOSE="altclose"
 TPL_BEEZ2_ALTCLOSE="is closed"
