@@ -188,11 +188,11 @@ JLIB_HTML_BEHAVIOR_HOLD_MOUSE="- Hold mouse button on any of the above buttons f
 JLIB_UTIL_ERROR_LOADING_FEED_DATA="Error loading feed data"
 JOPTION_NO_CATEGORY="- No Category -"
 
-DATE_FORMAT_LC="%A, %d %B %Y"
-DATE_FORMAT_LC1="%A, %d %B %Y"
-DATE_FORMAT_LC2="%A, %d %B %Y %H:%M"
-DATE_FORMAT_LC3="%d %B %Y"
-DATE_FORMAT_LC4="%d.%m.%y"
+DATE_FORMAT_LC="l, d F Y"
+DATE_FORMAT_LC1="l, d F Y"
+DATE_FORMAT_LC2="l, d F Y H:i"
+DATE_FORMAT_LC3="d F Y"
+DATE_FORMAT_LC4="d.m.y"
 DATE_FORMAT_JS1="y-m-d"
 
 ; Months
