@@ -122,7 +122,7 @@ class JTableCategory extends JTableNested
 
 		$this->alias = JApplication::stringURLSafe($this->alias);
 		if (trim(str_replace('-','',$this->alias)) == '') {
-			$this->alias = JFactory::getDate()->toFormat('%Y-%m-%d-%H-%M-%S');
+			$this->alias = JFactory::getDate()->format('Y-m-d-H-i-s');
 		}
 
 		return true;
