@@ -34,12 +34,12 @@ class modArchiveHelper
 		foreach ($rows as $row) {
 			$date = &JFactory::getDate($row->created);
 
-			$created_month	= $date->toFormat("%m");
-			$month_name		= $date->toFormat("%B");
-			$created_year	= $date->toFormat("%Y");
+			$created_month	= $date->format("n");
+			$month_name		= $date->format("F");
+			$created_year	= $date->format("Y");
 
 			$lists[$i]->link	= JRoute::_('index.php?option=com_content&view=archive&year='.$created_year.'&month='.$created_month.$itemid);
-			$lists[$i]->text	= $month_name.', '.$created_year;
+			$lists[$i]->text	= JText::sprintf('MOD_ARTICLES_ARCHIVE_DATE',$month_name,$created_year);
 			$i++;
 		}
 		return $lists;
