@@ -12,7 +12,7 @@ defined('_JEXEC') or die;
 
 $app		= &JFactory::getApplication();
 $date		= &JFactory::getDate();
-$cur_year	= $date->toFormat('%Y');
+$cur_year	= $date->format('Y');
 $csite_name	= $app->getCfg('sitename');
 
 if (JString::strpos(JText :: _('MOD_FOOTER_LINE1'), '%date%')) {
